<resources>
    <string name="app_name">Movie</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="avengers_movie_name">Avengers:\nEnd Game</string>
    <string name="avengers_movie_name_list">Avengers: End Game</string>
    <string name="avengers_movie_min">137 MIN</string>
    <string name="avengers_movie_tags">Action, Adventure, Fantasy</string>
    <string name="avengers_movie_reviews">125 Reviews</string>
    <string name="avengers_movie_storyline_name">Storyline</string>
    <string name="avengers_movie_cast">Cast</string>
    <string name="avengers_movie_back">Back</string>
    <string name="avengers_movie_robert_down">Robert \nDowney Jr.</string>
    <string name="avengers_movie_chris_evans">Chris \nEvans</string>
    <string name="avengers_movie_mark_ruffal">Mark \nRuffalo</string>
    <string name="avengers_movie_chris_hemsw">Chris Hemsworth</string>
    <string name="avengers_movies_list">Movies list</string>
    <string name="avengers_movie_storyline_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\'actions and restore balance to the universe.</string>
    <string name="star">star</string>
    <string name="star_red">red star</string>
    <string name="shape">shape</string>
    <string name="background_movie">backgroundMovie</string>
    <string name="movie">Movie</string>
    <string name="mask">Mask</string>
    <string name="like">Like</string>
    <string name="pg13">pg13</string>
</resources>